--- a/lab 3.03 challenge-1.ipynb
+++ b/lab 3.03 challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "       'Dragon', 'Dark', 'Steel', 'Flying', nan], dtype=object)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Mega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
        "      <td>625</td>\n",
@@ -523,7 +523,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Mega Charizard X</td>\n",
        "      <td>Fire</td>\n",
        "      <td>Dragon</td>\n",
        "      <td>634</td>\n",
@@ -539,7 +539,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard Y</td>\n",
+       "      <td>Mega Charizard Y</td>\n",
        "      <td>Fire</td>\n",
        "      <td>Flying</td>\n",
        "      <td>634</td>\n",
@@ -573,32 +573,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   #                       Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1                  Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                    Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3                   Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3      VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4                 Charmander   Fire     NaN    309  39      52       43   \n",
-       "5  5                 Charmeleon   Fire     NaN    405  58      64       58   \n",
-       "6  6                  Charizard   Fire  Flying    534  78      84       78   \n",
-       "7  6  CharizardMega Charizard X   Fire  Dragon    634  78     130      111   \n",
-       "8  6  CharizardMega Charizard Y   Fire  Flying    634  78     104       78   \n",
-       "9  7                   Squirtle  Water     NaN    314  44      48       65   \n",
+       "   #              Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
+       "0  1         Bulbasaur  Grass  Poison    318  45      49       49       65   \n",
+       "1  2           Ivysaur  Grass  Poison    405  60      62       63       80   \n",
+       "2  3          Venusaur  Grass  Poison    525  80      82       83      100   \n",
+       "3  3     Mega Venusaur  Grass  Poison    625  80     100      123      122   \n",
+       "4  4        Charmander   Fire     NaN    309  39      52       43       60   \n",
+       "5  5        Charmeleon   Fire     NaN    405  58      64       58       80   \n",
+       "6  6         Charizard   Fire  Flying    534  78      84       78      109   \n",
+       "7  6  Mega Charizard X   Fire  Dragon    634  78     130      111      130   \n",
+       "8  6  Mega Charizard Y   Fire  Flying    634  78     104       78      159   \n",
+       "9  7          Squirtle  Water     NaN    314  44      48       65       50   \n",
        "\n",
-       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
-       "0       65       65     45           1      False  \n",
-       "1       80       80     60           1      False  \n",
-       "2      100      100     80           1      False  \n",
-       "3      122      120     80           1      False  \n",
-       "4       60       50     65           1      False  \n",
-       "5       80       65     80           1      False  \n",
-       "6      109       85    100           1      False  \n",
-       "7      130       85    100           1      False  \n",
-       "8      159      115    100           1      False  \n",
-       "9       50       64     43           1      False  "
+       "   Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65     45           1      False  \n",
+       "1       80     60           1      False  \n",
+       "2      100     80           1      False  \n",
+       "3      120     80           1      False  \n",
+       "4       50     65           1      False  \n",
+       "5       65     80           1      False  \n",
+       "6       85    100           1      False  \n",
+       "7       85    100           1      False  \n",
+       "8      115    100           1      False  \n",
+       "9       64     43           1      False  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,21 +608,21 @@
     "# pokemon['Name']\n",
     "pokemon[pokemon.Name.str.contains('%%Mega%%')]\n",
     "\n",
-    "# ch = 'Mega'\n",
-    "# new_names = []\n",
-    "# for i in pokemon['Name']:\n",
-    "#     try:\n",
-    "#         # Remove all characters before the string 'Mega' from string\n",
-    "#         i = i[i.index(ch)  : ]\n",
-    "#     except ValueError:\n",
-    "#         pass\n",
-    "#     new_names.append(i)\n",
+    "ch = 'Mega'\n",
+    "new_names = []\n",
+    "for i in pokemon['Name']:\n",
+    "    try:\n",
+    "        # Remove all characters before the string 'Mega' from string\n",
+    "        i = i[i.index(ch)  : ]\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "    new_names.append(i)\n",
     "    \n",
-    "# pokemon['Name'] = new_names\n",
+    "pokemon['Name'] = new_names\n",
     "\n",
     "\n",
-    "# test transformed data\n",
-    "pokemon.head(10)"
+    "# # test transformed data\n",
+    "pokemon.head(10)\n"
    ]
   },
   {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Mega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
        "      <td>625</td>\n",
@@ -799,7 +799,7 @@
        "    <tr>\n",
        "      <th>796</th>\n",
        "      <td>719</td>\n",
-       "      <td>DiancieMega Diancie</td>\n",
+       "      <td>Mega Diancie</td>\n",
        "      <td>Rock</td>\n",
        "      <td>Fairy</td>\n",
        "      <td>700</td>\n",
@@ -870,18 +870,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       #                   Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0      1              Bulbasaur    Grass  Poison    318  45      49       49   \n",
-       "1      2                Ivysaur    Grass  Poison    405  60      62       63   \n",
-       "2      3               Venusaur    Grass  Poison    525  80      82       83   \n",
-       "3      3  VenusaurMega Venusaur    Grass  Poison    625  80     100      123   \n",
-       "4      4             Charmander     Fire     NaN    309  39      52       43   \n",
-       "..   ...                    ...      ...     ...    ...  ..     ...      ...   \n",
-       "795  719                Diancie     Rock   Fairy    600  50     100      150   \n",
-       "796  719    DiancieMega Diancie     Rock   Fairy    700  50     160      110   \n",
-       "797  720    HoopaHoopa Confined  Psychic   Ghost    600  80     110       60   \n",
-       "798  720     HoopaHoopa Unbound  Psychic    Dark    680  80     160       60   \n",
-       "799  721              Volcanion     Fire   Water    600  80     110      120   \n",
+       "       #                 Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0      1            Bulbasaur    Grass  Poison    318  45      49       49   \n",
+       "1      2              Ivysaur    Grass  Poison    405  60      62       63   \n",
+       "2      3             Venusaur    Grass  Poison    525  80      82       83   \n",
+       "3      3        Mega Venusaur    Grass  Poison    625  80     100      123   \n",
+       "4      4           Charmander     Fire     NaN    309  39      52       43   \n",
+       "..   ...                  ...      ...     ...    ...  ..     ...      ...   \n",
+       "795  719              Diancie     Rock   Fairy    600  50     100      150   \n",
+       "796  719         Mega Diancie     Rock   Fairy    700  50     160      110   \n",
+       "797  720  HoopaHoopa Confined  Psychic   Ghost    600  80     110       60   \n",
+       "798  720   HoopaHoopa Unbound  Psychic    Dark    680  80     160       60   \n",
+       "799  721            Volcanion     Fire   Water    600  80     110      120   \n",
        "\n",
        "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  \n",
        "0         65       65     45           1      False   1.000000  \n",
@@ -899,7 +899,7 @@
        "[800 rows x 14 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,30 +919,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#                            386\n",
-       "Name          DeoxysAttack Forme\n",
-       "Type 1                   Psychic\n",
-       "Type 2                       NaN\n",
-       "Total                        600\n",
-       "HP                            50\n",
-       "Attack                       180\n",
-       "Defense                       20\n",
-       "Sp. Atk                      180\n",
-       "Sp. Def                       20\n",
-       "Speed                        150\n",
-       "Generation                     3\n",
-       "Legendary                   True\n",
-       "A/D Ratio                    9.0\n",
-       "Name: 429, dtype: object"
+       "'Zygarde50% Forme'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +939,8 @@
     "# display(pokemon['A/D Ratio'].max())\n",
     "\n",
     "pokemon.loc[pokemon['A/D Ratio'].idxmax()]\n",
-    "\n"
+    "\n",
+    "pokemon['Name'][pokemon['A/D Ratio'] == pokemon['A/D Ratio']].max()"
    ]
   },
   {
@@ -965,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +975,7 @@
        "Name: 230, dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1101,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Mega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
        "      <td>625</td>\n",
@@ -1152,22 +1139,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4             Charmander   Fire     nan    309  39      52       43   \n",
+       "   #           Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
+       "0  1      Bulbasaur  Grass  Poison    318  45      49       49       65   \n",
+       "1  2        Ivysaur  Grass  Poison    405  60      62       63       80   \n",
+       "2  3       Venusaur  Grass  Poison    525  80      82       83      100   \n",
+       "3  3  Mega Venusaur  Grass  Poison    625  80     100      123      122   \n",
+       "4  4     Charmander   Fire     nan    309  39      52       43       60   \n",
        "\n",
-       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio    Combo Type  \n",
-       "0       65       65     45           1      False   1.000000  Grass Poison  \n",
-       "1       80       80     60           1      False   0.984127  Grass Poison  \n",
-       "2      100      100     80           1      False   0.987952  Grass Poison  \n",
-       "3      122      120     80           1      False   0.813008  Grass Poison  \n",
-       "4       60       50     65           1      False   1.209302          Fire  "
+       "   Sp. Def  Speed  Generation  Legendary  A/D Ratio    Combo Type  \n",
+       "0       65     45           1      False   1.000000  Grass Poison  \n",
+       "1       80     60           1      False   0.984127  Grass Poison  \n",
+       "2      100     80           1      False   0.987952  Grass Poison  \n",
+       "3      120     80           1      False   0.813008  Grass Poison  \n",
+       "4       50     65           1      False   1.209302          Fire  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1281,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>15</td>\n",
-       "      <td>BeedrillMega Beedrill</td>\n",
+       "      <td>Mega Beedrill</td>\n",
        "      <td>Bug</td>\n",
        "      <td>Poison</td>\n",
        "      <td>495</td>\n",
@@ -1350,12 +1337,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       #                   Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "429  386     DeoxysAttack Forme  Psychic     nan    600  50     180       20   \n",
-       "347  318               Carvanha    Water    Dark    305  45      90       20   \n",
-       "19    15  BeedrillMega Beedrill      Bug  Poison    495  65     150       40   \n",
-       "453  408               Cranidos     Rock     nan    350  67     125       40   \n",
-       "348  319               Sharpedo    Water    Dark    460  70     120       40   \n",
+       "       #                Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "429  386  DeoxysAttack Forme  Psychic     nan    600  50     180       20   \n",
+       "347  318            Carvanha    Water    Dark    305  45      90       20   \n",
+       "19    15       Mega Beedrill      Bug  Poison    495  65     150       40   \n",
+       "453  408            Cranidos     Rock     nan    350  67     125       40   \n",
+       "348  319            Sharpedo    Water    Dark    460  70     120       40   \n",
        "\n",
        "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  Combo Type  \n",
        "429      180       20    150           3       True      9.000     Psychic  \n",
@@ -1365,7 +1352,7 @@
        "348       95       40     95           3      False      3.000  Water Dark  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,16 +1373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Psychic', 'Water Dark', 'Bug Poison', 'Rock', 'Water Dark']"
+       "['Psychic', 'Water Dark', 'Bug Poison', 'Rock']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1390,7 @@
    "source": [
     "# your code here\n",
     "high_ad = pokemon.nlargest(5,['A/D Ratio'])\n",
-    "high_ad_combo_type = list(high_ad['Combo Type'])\n",
+    "high_ad_combo_type = list(high_ad['Combo Type'].unique())\n",
     "high_ad_combo_type\n"
    ]
   },
@@ -1420,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1535,7 @@
        "Water Dark  88.833333  63.500000  87.166667    3.166667   0.000000   2.291949  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
